<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">眼病自查</string>

    <string name="yonghudenglu">用户登录</string>
    <string name="jizhumima">记住密码</string>
    <string name="zhuce">注册</string>
    <string name="denglu">登录</string>
    <string name="tiaoguodenglu">跳过登录</string>
    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="exitapp">再按一次退出程序</string>
    <string name="yonghuzhuce">用户注册</string>
    <string name="yonghuxingming">用户姓名:</string>
    <string name="xingbie">性     别:</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="chushengriqi">出生日期:</string>
    <string name="jiatingzhuzhi">家庭住址:</string>
    <string name="shoujihaoma">手机号码:</string>
    <string name="mima">密     码:</string>
    <string name="querenmima">确认密码:</string>
    <string name="bingshi">病     史:</string>
    <string name="bingshihint">请输入眼病相关以往病史</string>
    <string name="bingshiexam">（例 : 糖尿病、青光眼、白内障、高血压等）</string>
    <string name="shenqing">申请</string>
    <string name="bangzhu">帮助</string>
    <string name="fankui">反馈</string>
    <string name="uploadhint">患者信息（为他人拍照时须填写）</string>
    <string name="shangchuan">上传</string>
    <string name="shangchuanzhenduanxinxi">上传诊断信息</string>
    <string name="riqi">日     期:</string>
    <string name="xingming">姓     名:</string>
    <string name="zhaopianduibi">照片对比</string>
    <string name="chongpai">重拍</string>
    <string name="yishenghuifu">医生回复:</string>
    <string name="fankuixinxi">反馈信息</string>
    <string name="shiyongshuoming">使用说明</string>
    <string name="lijishiyong">立即使用</string>
    <string name="nian">年</string>
    <string name="yue">月</string>
    <string name="ri">日</string>
    <string name="zanwu">暂无</string>
    <string name="zhenduanyishengxingming">诊断医生姓名:</string>
    <string name="zhenduanriqi">诊断日期:</string>
    <string name="zhenduanjieguo">诊断结果:</string>
    <string name="mianzetiaokuan">免责条款</string>
    <string name="tongyi">同意</string>
    <string name="butongyi">不同意</string>
    <string name="xiayibu">下一步</string>
    <string name="insertusername">请输入用户名</string>
    <string name="insertpassword">请输入密码</string>
    <string name="insertname">请输入您的姓名</string>
    <string name="insertphonenum">请输入您的手机号码</string>
    <string name="insertrepassword">请重新输入您的密码</string>
    <string name="notmatchpassword">两次输入的密码不一致</string>
    <string name="invalidphonenum"></string>
    <string name="service_error">服务器处理中错误</string>
    <string name="network_error">网通讯错误</string>
    <string name="existphonenum">手机号码已存在</string>
    <string name="noexistuser">不存在手机号码或者密码</string>
    <string name="registersucess">用户注册成功</string>
    <string name="waiting">稍等一下。。。</string>
    <string name="selectphoto">您一定拍照两张照片</string>
    <string name="photoerror">选择的照片错误</string>
    <string name="requirelogin">您得登录可以上传照片。</string>
    <string name="cameranotavailable">此设备不提供摄像头</string>
    <string name="fanhui">返回</string>
    <string name="error_trialversion">当前的版本已过了使用期限</string>
    <string name="passlength_error">请输入6位以上密码</string>
    <string name="passwordhint">请输入6位以上密码</string>
    <string name="zhaopiancaiji">照片采集</string>
    <string name="flashhint1">请将手机竖屏后点击此处拍照</string>
    <string name="flashhint2">请将手机横屏后点击此处拍照</string>
    <string name="photohint1">受检者距拍摄者1米左右</string>
    <string name="photohint2">双眼放在框内水平中线上，微暗环境拍摄更佳</string>
    <string name="dianjitupianfangdachakan">点击图片放大查看</string>
    <string name="qingshurushoujihaoma">请输入11位手机号</string>
</resources>
